# freon

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: push-docker-image.yml
freon_server/: .env.template  .gitignore  README.md  manage.py  pyproject.toml  run-dev.sh  run.sh
freon_server/accounts/: __init__.py  admin.py  models.py  security.py  tests.py
freon_server/accounts/management/commands/: ensureadminuser.py
freon_server/accounts/migrations/: 0001_squashed_0005_alter_token_expires_at_alter_token_scopes.py
freon_server/api/: api.py
freon_server/freon_server/: api.py  asgi.py  settings.py  urls.py
freon_server/services/: apps.py  models.py  read_progress.py  tests.py  wallabag.py
freon_server/services/management/commands/: clearentries.py
freon_server/services/migrations/: 0001_initial.py
freon_server/wallabag_proxy/: admin.py  api.py  apps.py  models.py  security.py  wallabag.py
freon_server/wallabag_proxy/migrations/: 0001_initial.py
server/: .gitignore  README.md  go.mod  go.sum  main.go
server/api/: routes.go  users.go  users_test.go
server/auth/: errors.go  middlewares.go  models.go  routes.go  session.go
server/buildinfo/: version.go
server/cmd/: root.go  server.go  update_password.go  version.go
server/common/: ginhelpers.go  users.go
server/control/: routes.go  users.go  users_test.go
server/database/: init.go  models.go
server/serialize/: describe.go  describe_test.go
server/ui/: embed.go  relative.go  uifs.go
server/wallabag/: annotations.go  credentials.go  errors.go  resources_entries.go  resources_information.go  tags.go  types.go  types_test.go  wallabag.go
server/wallabagproxy/: proxy.go
tools/: extract_version.sh
ui/: README.md  analysis_options.yaml  pubspec.yaml
ui/lib/: main.dart
ui/lib/modules/: credentials.dart  events.dart  modules.dart  tokens.dart  users.dart
ui/lib/pages/: forms.dart  forms.g.dart  home.dart  list.dart  login.dart
ui/lib/providers/: modules.dart  modules.g.dart  router.dart  router.g.dart  theme_mode_switch.dart  (+1 more)
ui/web/: index.html  manifest.json
(+4 files in other folders)
