[project]
name = "freon-server"
version = "0.3.0"
description = ""
authors = [{ name = "casimir", email = "martin@casimir.me" }]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Django (>=5.2.1,<6.0.0)",
    "django-ninja (>=1.4.1,<2.0.0)",
    "python-environ (>=0.4.54,<0.5.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-queryinspect (>=1.1.0,<2.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "sentry-sdk[django] (>=2.0.0,<3.0.0)",
]

[dependency-groups]
webserver = ["granian>=2.2.6,<3"]
dev = [
    "granian[reload]>=2.2.6,<3",
    "django-debug-toolbar>=5.2.0,<6",
    "ipython>=9.2.0,<10",
]

[tool.uv]
package = false
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "I", # isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
